--- a/presentation/src/main/res/layout/fragment_main_fun.xml
+++ b/presentation/src/main/res/layout/fragment_main_fun.xml
@@ -4,6 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <data>
+
+        <variable
+            name="values"
+            type="com.kdn.presentation.SaveDataClass" />
+
+    </data>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -86,16 +95,43 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tree_name_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:fontFamily="@font/title_light"
-                android:text="소나무 / 소"
+                android:text="@{values.tree}"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView4"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="/"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView4"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/tree_name_textView"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/size_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="@{values.size}"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView6"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -169,7 +205,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:fontFamily="@font/title_light"
-                android:text="28%"
+                android:text="@{values.volume}"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -192,10 +228,11 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
+                android:id="@+id/battery_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/title_light"
-                android:text="56%"
+                android:text="@{values.battery}"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -232,18 +269,44 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/temperature_textview"
+                android:id="@+id/temperature_max_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:fontFamily="@font/title_light"
-                android:text="28℃ / 36℃"
+                android:text="@{values.ieast_temperature}"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/temperature_image"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.064" />
+
+            <TextView
+                android:id="@+id/textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="/"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/temperature_max_textview"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.064" />
+
+            <TextView
+                android:id="@+id/temperature_small_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="@{values.maximum_temperature}"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textview"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.064" />
 
@@ -260,18 +323,46 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/humidity_textview"
+                android:id="@+id/eme_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/title_light"
-                android:text="28% / 0%"
+                android:text="/"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/humidity_max_textview"
+                app:layout_constraintStart_toEndOf="@+id/humidity_max_textview"
+                app:layout_constraintTop_toTopOf="@+id/humidity_max_textview" />
+
+            <TextView
+                android:id="@+id/humidity_max_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="@{values.current_humidity}"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.928"
+                app:layout_constraintHorizontal_bias="0.287"
                 app:layout_constraintStart_toEndOf="@+id/humidity_image"
-                app:layout_constraintTop_toBottomOf="@+id/temperature_textview"
+                app:layout_constraintTop_toBottomOf="@+id/temperature_max_textview"
+                app:layout_constraintVertical_bias="0.466" />
+
+
+            <TextView
+                android:id="@+id/humidity_small_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="@{values.desired_humidity}"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.287"
+                app:layout_constraintStart_toEndOf="@+id/eme_textview"
+                app:layout_constraintTop_toBottomOf="@+id/temperature_max_textview"
                 app:layout_constraintVertical_bias="0.466" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -301,19 +392,69 @@
                 app:layout_constraintVertical_bias="0.425" />
 
             <TextView
-                android:id="@+id/setTime_image_textview"
+                android:id="@+id/output_size_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/title_light"
-                android:text="120ml / 24시간"
+                android:text="@{values.output}"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.95"
                 app:layout_constraintStart_toEndOf="@+id/setTime_image"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.652" />
+
+            <TextView
+                android:id="@+id/empty2_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="ml"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/output_size_textview"
+                app:layout_constraintStart_toEndOf="@+id/output_size_textview"
+                app:layout_constraintTop_toTopOf="@+id/output_size_textview" />
+
+            <TextView
+                android:id="@+id/setTime_image_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="21dp"
+                android:fontFamily="@font/title_light"
+                android:text="/"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/empty2_textview"
+                app:layout_constraintStart_toEndOf="@+id/empty2_textview"
+                app:layout_constraintStart_toStartOf="@+id/empty2_textview"
+                app:layout_constraintTop_toTopOf="@+id/empty2_textview" />
+
+            <TextView
+                android:id="@+id/setTime_water_time_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="@{values.output_time}"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/output_size_textview"
+                app:layout_constraintStart_toEndOf="@+id/setTime_image_textview"
+                app:layout_constraintTop_toTopOf="@+id/setTime_image_textview" />
+
+            <TextView
+                android:id="@+id/time_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="시간"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/output_size_textview"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/setTime_water_time_textview"
+                app:layout_constraintTop_toTopOf="@+id/output_size_textview"
                 app:layout_constraintVertical_bias="0.565" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -343,20 +484,58 @@
                 app:layout_constraintVertical_bias="0.425" />
 
             <TextView
-                android:id="@+id/setAlarm_textview"
+                android:id="@+id/setAlarm_o_clock_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/title_light"
-                android:text="6시간 18분전"
+                android:text="@{values.alarm_o_clock}"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/setAlarm_image"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.565" />
+
+            <TextView
+                android:id="@+id/time_mine_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="시간"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="@+id/setAlarm_o_clock_textview"
+                app:layout_constraintStart_toEndOf="@+id/setAlarm_o_clock_textview"
+                app:layout_constraintTop_toTopOf="@+id/setAlarm_o_clock_textview" />
+
+            <TextView
+                android:id="@+id/setAlarm_minutes_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="@{values.alram_minutes}"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/time_mine_textview"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.565" />
+
+            <TextView
+                android:id="@+id/minutes_mine_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/title_light"
+                android:text="분후"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.95"
-                app:layout_constraintStart_toEndOf="@+id/setAlarm_image"
+                app:layout_constraintStart_toEndOf="@+id/setAlarm_minutes_textview"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.565" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
